trunk/Archive2/bb/9c1bbcb9de7b2d/output
main.cpp:11:22: warning: character constant too long for its type
         std::cout << 'test1';
                      ^
main.cpp: In function 'int main()':
main.cpp:11:9: error: 'cout' is not a member of 'std'
         std::cout << 'test1';
         ^
