trunk/Archive2/bb/9c1bbcb9de7b2d/main.cpp
#include <string>


int main()
{
    bool test1 = false;
    bool test2 = true;
    bool test3 = true;
    
    if ((test1 && test2) || !test3)
        std::cout << 'test1';
}
